[package]
name = "rust_ot"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rust_ot"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { version = "0.21.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rustler = { git = "https://github.com/sunny-g/serde_rustler", rev = "283e41b" }

[dev-dependencies]
rand = { version = "0.7.3" }
criterion = { version = "0.3" }